--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
-/*  your css code here. If applicable */
+/*  your css code here. If applicable
+
+	let count=1;
+	for(let i=0;i<str.length-1;i++)
+		{
+			if(str.charAt(i)== str.charAt(i+1))
+			{
+				count++;
+			}
+			else
+			{
+				count--;
+			}
+			if(count==0)
+			{
+				return str.charAt(i);
+			}
+		}
+	return null;
+*/
